k8s/base/backend/svc.yaml
apiVersion: v1
kind: Service
metadata: { name: back, namespace: rhorizon }
spec:
  selector: { app: back }
  ports: [ { port: 8000, targetPort: 8000 } ]
